i made some changes to the padding of the section element and fixed the overflow issue by uncommenting the html and body styles. Also, I changed the display property of the container class to inline-flex for better layout control.

--- a/style.css
+++ b/style.css
@@ -47,8 +47,7 @@ body{
 
 section{
   max-width: 100%; 
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding: 10rem 8% 10rem;
 
 }
 
@@ -63,6 +62,7 @@ header{
   justify-content: space-between;
   width: 100%;
   padding: 20px 10%;
+  
  
 }
 
@@ -197,11 +197,12 @@ span{
   min-height: 100vh;
   height: 100%;
   width: 100%;
-  display: block;
+  display: inline-flex;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   grid-gap: 2rem;
   padding-right: 20px;
+
 }
 
 .home-content{
@@ -1209,6 +1210,3 @@ footer a i{
   }
    
 }
-
-
-
